[gd_scene load_steps=7 format=3 uid="uid://c3ym1pshojv58"]

[ext_resource type="Script" path="res://admiral.gd" id="1_p1akf"]
[ext_resource type="Texture2D" uid="uid://bo6r0w1yv88wu" path="res://Assets/HEROS8bit_Dog Idle D.png" id="2_ip6h3"]
[ext_resource type="PackedScene" uid="uid://brpv0wwkkq08a" path="res://view_distance.tscn" id="3_pav7m"]
[ext_resource type="PackedScene" uid="uid://dujquj8r863hi" path="res://recon.tscn" id="4_rlpmn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q7fj7"]
radius = 6.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_aiu2a"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Recon:disable_mode")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Admiral" type="CharacterBody2D" groups=["Player"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_p1akf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ip6h3")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="PhysicalBody" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q7fj7")

[node name="ViewDistance" parent="." instance=ExtResource("3_pav7m")]

[node name="Recon" parent="." instance=ExtResource("4_rlpmn")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_aiu2a")

[node name="FogOfWarTimer" type="Timer" parent="."]

[connection signal="body_entered" from="ViewDistance" to="." method="_on_view_distance_body_entered"]
[connection signal="body_exited" from="ViewDistance" to="." method="_on_view_distance_body_exited"]
[connection signal="timeout" from="FogOfWarTimer" to="." method="_on_fog_of_war_timer_timeout"]
